--- a/autonomy_core/state_machine/action_trackers/package.xml
+++ b/autonomy_core/state_machine/action_trackers/package.xml
@@ -10,7 +10,7 @@
   <maintainer email="liuxu@seas.upenn.edu">Xu Liu</maintainer>
   <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
 
-  <license>TODO</license>
+  <license>Penn Software License</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
