--- a/autonomy_core/state_machine/state_machine_core/package.xml
+++ b/autonomy_core/state_machine/state_machine_core/package.xml
@@ -9,7 +9,7 @@
   <maintainer email="yztao@seas.upenn.edu">Yuezhan Tao</maintainer>
   <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
 
-  <license>TODO</license>
+  <license>Penn Software License</license>
 
 
   <buildtool_depend>catkin</buildtool_depend>
