--- a/autonomy_sim/unity_sim/fake_sloam/package.xml
+++ b/autonomy_sim/unity_sim/fake_sloam/package.xml
@@ -7,7 +7,7 @@
   <maintainer email="liuxu@seas.upenn.edu">Xu Liu</maintainer>
   <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
   <maintainer email="guilhermenardari@gmail.com">Guilherme Nardari</maintainer>
-  <license>Apache-2.0</license>
+  <license>Penn Software License</license>
 
   <export>
   </export>
