--- a/autonomy_core/client/kr_rviz_plugins/package.xml
+++ b/autonomy_core/client/kr_rviz_plugins/package.xml
@@ -5,7 +5,7 @@
      Quadrotor plugins for RViz.
   </description>
   <maintainer email="tdineshd@gmail.com">Dinesh Thakur</maintainer>
-  <license>BSD</license>
+  <license>Penn Software License</license>
 
   <author>Dinesh Thakur</author>
 
