--- a/autonomy_core/interface/mavros_interface/package.xml
+++ b/autonomy_core/interface/mavros_interface/package.xml
@@ -6,7 +6,7 @@
   <maintainer email="JustinThomas@jtwebs.net">Justin Thomas</maintainer>
   <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>
 
-  <license>BSD</license>
+  <license>Penn Software License</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
