--- a/autonomy_core/map_plan/jps3d/package.xml
+++ b/autonomy_core/map_plan/jps3d/package.xml
@@ -5,7 +5,7 @@
   <description>The jps3d package</description>
   <maintainer email="sikang@seas.upenn.edu">sikang</maintainer>
 
-  <license>BSD-3-Clause</license>
+  <license>Penn Software License</license>
   <buildtool_depend>catkin</buildtool_depend>
 
   <export>
