--- a/autonomy_core/map_plan/map_plan_launch/package.xml
+++ b/autonomy_core/map_plan/map_plan_launch/package.xml
@@ -8,7 +8,7 @@
     <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
     <maintainer email="guilhermenardari@gmail.com">Guilherme Nardari</maintainer>
 
-    <license>TODO</license>
+    <license>Penn Software License</license>
     <buildtool_depend>catkin</buildtool_depend>
 
     <export>
