--- a/autonomy_core/map_plan/mapper/package.xml
+++ b/autonomy_core/map_plan/mapper/package.xml
@@ -8,7 +8,7 @@
   <maintainer email="guilhermenardari@gmail.com">Guilherme Nardari</maintainer>
   <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
 
-  <license>Apache-2.0</license>
+  <license>Penn Software License</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
