--- a/autonomy_core/map_plan/mpl/package.xml
+++ b/autonomy_core/map_plan/mpl/package.xml
@@ -4,7 +4,7 @@
   <description> search-based motion primitive planning library</description>
   <author>Sikang Liu</author>
   <maintainer email="sikang@seas.upenn.edu">Sikang Liu</maintainer>
-  <license>Apache-2.0</license>
+  <license>Penn Software License</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
