--- a/autonomy_core/map_plan/planning_ros_msgs/package.xml
+++ b/autonomy_core/map_plan/planning_ros_msgs/package.xml
@@ -7,7 +7,7 @@
   <maintainer email="sikang@seas.upenn.edu">sikang</maintainer>
   <maintainer email="laurajar@seas.upenn.edu">Laura Jarin-Lipschitz</maintainer>
 
-  <license>Apache-2.0</license>
+  <license>Penn Software License</license>
 
   <buildtool_depend>catkin</buildtool_depend>
   <depend>geometry_msgs</depend>
