--- a/autonomy_core/map_plan/planning_ros_utils/package.xml
+++ b/autonomy_core/map_plan/planning_ros_utils/package.xml
@@ -7,7 +7,7 @@
   <maintainer email="sikang@todo.todo">sikang</maintainer>
   <maintainer email="laurajar@seas.upenn.edu">Laura Jarin-Lipschitz</maintainer>
 
-  <license>Apache-2.0</license>
+  <license>Penn Software License</license>
 
   <buildtool_depend>catkin</buildtool_depend>
   <depend>roscpp</depend>
