--- a/autonomy_real/real_experiment_launch/package.xml
+++ b/autonomy_real/real_experiment_launch/package.xml
@@ -8,7 +8,7 @@
   <maintainer email="fclad@seas.upenn.edu">Fernando Cladera</maintainer>
   <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
 
-  <license>UPenn</license>
+  <license>Penn Software License</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
