--- a/autonomy_sim/unity_sim/fake_lidar/package.xml
+++ b/autonomy_sim/unity_sim/fake_lidar/package.xml
@@ -7,7 +7,8 @@
   <maintainer email="guilhermenardari@gmail.com">Guilherme Nardari</maintainer>
   <maintainer email="liuxu@seas.upenn.edu">Xu Liu</maintainer>
 
-  <license>Penn</license>
+  <license>Penn Software License</license>
+
 
   <buildtool_depend>catkin</buildtool_depend>
 
