--- a/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
+++ b/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
@@ -19,7 +19,7 @@ trajectory_planner:
   max_a: 3.0 # suggested for 2-D 7, for 3-D 2
   max_j: 1.0 # suggested for 2-D 3, for 3-D 2
   max_u: 1.0 # suggested for 2-D 3, for 3-D 1, for each axis jerk increment choice is -max_u, 0, max_u
-  use_3d_local: false # use 3d planner
+  use_3d_local: true # use 3d planner
 
   use_3d_global: false 
   z_cost_factor: 1 # global map z cost factor (cost_along_z = z_cost_factor * cost_along_x_or_y)
@@ -32,8 +32,8 @@ trajectory_planner:
   global_goal_tol_acc: -1 # tolerance of velocity for goal region
   dt: 1.0 # execution time for each primitive
   ndt: 1.0 # default 1
-  max_num: -1 # Maxmum number of expansion, -1 means no limitation
-  heuristic_weight: 15.0
+  max_num: -1 # maxmum number of expansion, -1 means no limitation
+  heuristic_weight: 30.0 # the larger heuristic_weight, the more emphasis on min time and the less emphasis on min control effort
   vertical_semi_fov: 0.392 # vertical semi field of view (in rad), used for 3D planning only
 
 stopping_policy:
