--- a/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
+++ b/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
@@ -34,7 +34,7 @@ trajectory_planner:
   ndt: 1.0 # default 1
   max_num: -1 # maxmum number of expansion, -1 means no limitation
   heuristic_weight: 300.0 # the larger heuristic_weight, the more emphasis on min time and the less emphasis on min control effort
-  vertical_semi_fov: 0.61 # vertical semi field of view (in rad), used for 3D planning only, value should lie in (0, pi/2)
+  vertical_semi_fov: 0.61 # vertical semi field of view (in rad), used for 3D planning only, value should lie in (0, pi/2), if 2D planning set it as 0
 
 stopping_policy:
   acc_xy_des: 4.0 #
