--- a/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
+++ b/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
@@ -28,8 +28,8 @@ trajectory_planner:
   max_j_z: 3.0 # default 1.0
   max_u_z: 3.0 # default 1.0
   tol_pos: 5.0 # distance tolerance for goal region, 0 means no tolerance, -1 means no limitation
-  global_goal_tol_vel: 5.0 # tolerance of acceleration for goal region
-  global_goal_tol_acc: -1 # tolerance of velocity for goal region
+  global_goal_tol_vel: 3.0 # tolerance of velocity for goal region
+  global_goal_tol_acc: -1 # tolerance of acceleration for goal region
   dt: 1.0 # execution time for each primitive
   ndt: 1.0 # default 1
   max_num: -1 # maxmum number of expansion, -1 means no limitation
