remove kr_rviz_plugins, use Dinesh standalone branch of the original repo, modify state machine GUI and rviz config to adapt to this change

--- a/external.yaml
+++ b/external.yaml
@@ -19,3 +19,8 @@ repositories:
     type: git
     url: http://github.com/XuRobotics/ouster_example.git
     version: os-sim
+
+  waypoint_navigation_plugin:
+    type: git
+    url: https://github.com/KumarRobotics/waypoint_navigation_plugin.git
+    version: devel_yaml
