--- a/autonomy_core/control/Dockerfile
+++ b/autonomy_core/control/Dockerfile
@@ -1,7 +1,7 @@
 FROM kumarrobotics/autonomy:base
 
-RUN apt update \
-    && apt install -y \
+RUN apt-get update \
+    && apt-get install -y \
     ros-melodic-mavros \
     ros-melodic-mavros-msgs \
     ros-melodic-mavros-extras
