--- a/autonomy_core/state_machine/Dockerfile
+++ b/autonomy_core/state_machine/Dockerfile
@@ -4,6 +4,8 @@ RUN apt-get update \
     && apt-get install -y \
     python3-yaml
 
+RUN pip3 install rospkg
+
 RUN mkdir -p /root/state_machine_ws/src 
 WORKDIR /root/state_machine_ws
 COPY autonomy_core/state_machine/ src/
