--- a/.github/workflows/shellcheck-reviewdog.yaml
+++ b/.github/workflows/shellcheck-reviewdog.yaml
@@ -10,4 +10,7 @@ jobs:
       with:
         github_token: ${{ secrets.kr_autonomous_flight_TOKEN_REVIEWDOG }}
         reporter: github-pr-check
-        exclude: "./.git/*"
+        exclude: |
+          ./.git/*
+          autonomy_sim/docker/entrypoint.sh
+          autonomy_sim/docker/run.sh
