Use Xu's repo and Dinesh waypoint in sim

--- a/autonomy_sim/Dockerfile
+++ b/autonomy_sim/Dockerfile
@@ -12,7 +12,7 @@ COPY autonomy_sim/external.yaml src/
 COPY autonomy_core/client/ src/
 RUN catkin init && catkin config --extend /root/state_machine_ws/devel
 RUN vcs import --input src/external.yaml src/
-RUN catkin build -j2 -DCMAKE_BUILD_TYPE=RelWithDebInfo
+RUN catkin build -j2 --no-status -DCMAKE_BUILD_TYPE=RelWithDebInfo
 
 COPY autonomy_sim/docker/entrypoint.sh /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
