--- a/.github/workflows/docker-build-sim.yaml
+++ b/.github/workflows/docker-build-sim.yaml
@@ -44,7 +44,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: kumarrobotics/autonomy:autonomy_sim
+          tags: kumarrobotics/autonomy:sim
           file: ./autonomy_sim/Dockerfile
           platforms: linux/amd64,linux/arm64
       -
