--- a/autonomy_core/state_machine/action_trackers/CMakeLists.txt
+++ b/autonomy_core/state_machine/action_trackers/CMakeLists.txt
@@ -35,7 +35,9 @@ generate_messages(DEPENDENCIES actionlib_msgs planning_ros_msgs kr_mav_msgs
 catkin_package(CATKIN_DEPENDS kr_mav_msgs actionlib_msgs planning_ros_msgs
                               kr_tracker_msgs)
 
-add_library(${PROJECT_NAME} src/projector.cpp src/traj_to_quad_cmd.cpp)
+# src/projector.cpp only used for previous experiments where we directly track A* (JPS) planned path
+# add_library(${PROJECT_NAME} src/projector.cpp src/traj_to_quad_cmd.cpp)
+add_library(${PROJECT_NAME} src/traj_to_quad_cmd.cpp)
 target_include_directories(${PROJECT_NAME} PUBLIC include ${catkin_INCLUDE_DIRS})
 target_link_libraries(${PROJECT_NAME} PUBLIC ${catkin_LIBRARIES} Eigen3::Eigen)
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS}
@@ -44,8 +46,9 @@ add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS}
 add_library(stopping_policy src/stopping_policy.cpp)
 target_link_libraries(stopping_policy PRIVATE ${PROJECT_NAME})
 
-add_library(action_path_tracker src/path_tracker.cpp)
-target_link_libraries(action_path_tracker PRIVATE ${PROJECT_NAME})
+# src/path_tracker.cpp only used for previous experiments where we directly track A* (JPS) planned path
+# add_library(action_path_tracker src/path_tracker.cpp)
+# target_link_libraries(action_path_tracker PRIVATE ${PROJECT_NAME})
 
 add_library(take_off_tracker src/take_off_tracker.cpp)
 target_link_libraries(take_off_tracker PRIVATE ${PROJECT_NAME})
