Add Parameters to VoxelMap.msg

--- a/autonomy_core/map_plan/jps3d/CMakeLists.txt
+++ b/autonomy_core/map_plan/jps3d/CMakeLists.txt
@@ -3,13 +3,14 @@ project(jps3d)
 
 set(CMAKE_CXX_STANDARD 17)
 
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED
+            COMPONENTS planning_ros_msgs)
 find_package(Eigen3 REQUIRED)
 find_package(Boost REQUIRED)
 
-catkin_package(INCLUDE_DIRS include LIBRARIES ${PROJECT_NAME})
+catkin_package(INCLUDE_DIRS include LIBRARIES ${PROJECT_NAME} CATKIN_DEPENDS planning_ros_msgs)
 
 add_library(${PROJECT_NAME} src/graph_search.cpp src/jps_planner.cpp
                             src/map_util.cpp)
-target_include_directories(${PROJECT_NAME} PUBLIC include)
+target_include_directories(${PROJECT_NAME} PUBLIC include ${catkin_INCLUDE_DIRS})
 target_link_libraries(${PROJECT_NAME} PUBLIC Eigen3::Eigen Boost::boost)
