--- a/autonomy_core/map_plan/mpl/package.xml
+++ b/autonomy_core/map_plan/mpl/package.xml
@@ -8,6 +8,8 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <depend>planning_ros_msgs</depend>
+
   <!-- The export tag contains other, unspecified, tags -->
   <export>
   </export>
