* rename planning_ros_msgs -> kr_planning_msgs * rename planning_ros_utils -> kr_planning_rviz_plugins * remove both of the above from kr_autonomous flight (todo: add to external repos) * move primitive_ros_utils (converts btw MPL and kr_planning_msgs) to the action_planner since it is only used there * still todo: data_type.h (defines common datatypes like Vec3f) and data_ros_utils (random data conversions) should not live in kr_planning_rviz_plugins, and should be in some common location. data_type is also copied from mpl/jps. state_machine, action_trackers, and action_planner are the packages that use data_ros_utils

--- a/autonomy_core/client/rqt_quadrotor_safety/package.xml
+++ b/autonomy_core/client/rqt_quadrotor_safety/package.xml
@@ -14,7 +14,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <run_depend>geometry_msgs</run_depend>
-  <run_depend>planning_ros_msgs</run_depend>
+  <run_depend>kr_planning_msgs</run_depend>
   <run_depend>mavros_msgs</run_depend>
   <run_depend>python-rospkg</run_depend>
   <run_depend>rostopic</run_depend>
