--- a/autonomy_core/map_plan/mapper/package.xml
+++ b/autonomy_core/map_plan/mapper/package.xml
@@ -15,8 +15,8 @@
   <depend>roscpp</depend>
   <depend>pcl_ros</depend>
   <depend>image_geometry</depend>
-  <depend>planning_ros_msgs</depend>
-  <depend>planning_ros_utils</depend>
+  <depend>kr_planning_msgs</depend>
+  <depend>kr_planning_rviz_plugins</depend>
   <depend>sensor_msgs</depend>
   <depend>depth_image_proc</depend>
   <depend>tf_conversions</depend>
