--- a/autonomy_core/map_plan/jps3d/package.xml
+++ b/autonomy_core/map_plan/jps3d/package.xml
@@ -8,7 +8,7 @@
   <license>BSD-3-Clause</license>
   <buildtool_depend>catkin</buildtool_depend>
 
-  <depend>planning_ros_msgs</depend>
+  <depend>kr_planning_msgs</depend>
 
   <export>
   </export>
