--- a/autonomy_core/map_plan/mpl/CMakeLists.txt
+++ b/autonomy_core/map_plan/mpl/CMakeLists.txt
@@ -4,14 +4,14 @@ project(motion_primitive_library)
 set(CMAKE_CXX_STANDARD 17)
 
 find_package(catkin REQUIRED
-              COMPONENTS planning_ros_msgs)
+              COMPONENTS kr_planning_msgs)
 find_package(Eigen3 REQUIRED)
 find_package(Boost REQUIRED)
 
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES ${PROJECT_NAME}
-  CATKIN_DEPENDS planning_ros_msgs
+  CATKIN_DEPENDS kr_planning_msgs
   DEPENDS EIGEN3)
 
 add_library(
