Added unit tests and benchmarking tests for MPL::MapUtil

--- a/autonomy_core/map_plan/mpl/CMakeLists.txt
+++ b/autonomy_core/map_plan/mpl/CMakeLists.txt
@@ -30,3 +30,38 @@ add_library(
   src/graph_search.cpp)
 target_include_directories(${PROJECT_NAME} PUBLIC include ${catkin_INCLUDE_DIRS})
 target_link_libraries(${PROJECT_NAME} PUBLIC Eigen3::Eigen Boost::boost)
+
+#----------------------------------------------------------------------------------
+# Add testing with GoogleTest
+
+# To run test:
+#   catkin test motion_primitive_library
+enable_testing()
+
+catkin_add_gtest(test_map_util test/test_map_util.cpp)
+target_link_libraries(test_map_util ${catkin_LIBRARIES} ${PROJECT_NAME})
+
+#----------------------------------------------------------------------------------
+# Add microbenchmarking with Google Benchmark
+
+# To run benchmark:
+#   rosrun motion_primitive_library map_util_benchmarking
+# if you want to save the results to a file:
+#   rosrun motion_primitive_library map_util benchmarking --benchmark_out=file_name.json
+# if you want to compare two benchmark files, use the compare.py script located
+# in the build directory under motion_primitive_library/_deps/benchmark-src/tools/
+# (you will need to have pandas installed). Also changed the shebang to use python3
+# e.g. from the catkin root directory run:
+#   ./build/motion_primitive_library/_deps/benchmark-src/tools/compare.py benchmarks file1.json file2.json
+
+include(FetchContent)
+FetchContent_Declare(
+    benchmark
+    URL https://github.com/google/benchmark/archive/b7afda2cd2d81230737caa1073e160b6406798d7.zip
+)
+FetchContent_MakeAvailable(benchmark)
+
+add_executable(map_util_benchmarking test/benchmark_map_util.cpp)
+target_link_libraries(map_util_benchmarking benchmark::benchmark ${PROJECT_NAME})
+
+
