--- a/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
+++ b/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
@@ -42,6 +42,23 @@ trajectory_planner:
   max_num: -1 # maxmum number of expansion, -1 means no limitation
   heuristic_weight: 50.0 # the larger heuristic_weight, the more emphasis on min time and the less emphasis on min control effort, recommended value: 50 for 2-D, 300 for 3-D
   vertical_semi_fov: 0.61 # vertical semi field of view (in rad), used for 3D planning only, value should lie in (0, pi/2), if 2D planning set it as 0
+  use_opt_planner: true
+  optimization/bb_back: 1.5
+  optimization/w_time: 8.0
+  optimization/w_vel: 240.0
+  optimization/w_acc: 240.0
+  optimization/w_sta_obs: 10.0
+  search/max_tau: 0.6
+  search/init_max_tau: 0.6
+  search/horizon: 15.0
+  search/resolution_astar: 0.1
+  search/lambda_heu: 5.0
+  search/allocate_num: 100000
+  search/vis_check_num: 15
+  search/w_time: 3.0
+  search/use_jerk: false
+  map_frame: "quadrotor/map" 
+
 
 stopping_policy:
   acc_xy_des: 6.0 # stopping policy x-y maximum acceleration 
