--- a/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
+++ b/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
@@ -43,20 +43,21 @@ trajectory_planner:
   heuristic_weight: 50.0 # the larger heuristic_weight, the more emphasis on min time and the less emphasis on min control effort, recommended value: 50 for 2-D, 300 for 3-D
   vertical_semi_fov: 0.61 # vertical semi field of view (in rad), used for 3D planning only, value should lie in (0, pi/2), if 2D planning set it as 0
   use_opt_planner: true
-  optimization/bb_back: 1.5
+  optimization/bb_back: 2.0
   optimization/w_time: 8.0
-  optimization/w_vel: 240.0
-  optimization/w_acc: 240.0
-  optimization/w_sta_obs: 10.0
+  optimization/w_vel: 360.0
+  optimization/w_acc: 360.0
+  optimization/w_sta_obs: 20.0
   search/max_tau: 0.6
   search/init_max_tau: 0.6
   search/horizon: 15.0
-  search/resolution_astar: 0.1
   search/lambda_heu: 5.0
   search/allocate_num: 100000
+  search/resolution_astar: 0.3
   search/vis_check_num: 15
   search/w_time: 3.0
   search/use_jerk: false
+  search/time_res: 0.15
   map_frame: "quadrotor/map" 
 
 
