Update namespace name from kr_planning_rviz_plugins -> kr per @versatran01 's request

--- a/autonomy_core/map_plan/mapper/CMakeLists.txt
+++ b/autonomy_core/map_plan/mapper/CMakeLists.txt
@@ -12,7 +12,8 @@ find_package(
              depth_image_proc
              sensor_msgs
              eigen_conversions
-             tf_conversions)
+             tf_conversions
+             motion_primitive_library)
              
 find_package(Boost REQUIRED COMPONENTS timer)
 
